# hal2cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  build.sh  config.json  docker-compose.yaml  generate.py  run  server.py
configs/: hal2cpp-config.stepconf
configs/hal2cpp-config/: hal2cpp-config.hal  hal2cpp-config.ini  hal2cpp-config_1743951990.hal  hal2cpp-config_1743951990.ini  postgui_call_list.hal  pyvcp_options.hal
g-code/: test.nc
hal/: hal2cpp.comp  hal2cpp.h
src/: TinyStd.hpp  hal2cpp.cpp
src/hal/: hal2cpp.comp  hal2cpp.h
